Uploaded  additional image files and initial files for web dev portfolio.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	<head>
 		<title>Developer Portfolio - Ian Carl Gimenez</title>
 		<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Anton|Kodchasan|Questrial" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Anton|Kodchasan|Questrial|Patua+One" rel="stylesheet">
 	</head>
 	<body>
+		<div id="bkg_image"></div>
 		<div id="container">
 			<img src="assets/images/me.jpg" class="me">
 			<h1>Ian Carl Gimenez</h1>
-			<h2>FULL STACK WEB DEVELOPER</h2>
+			<h2>FULL STACK WEB DEVELOPER</h2>		
 			<div id="bio_container">
 				<P class="bio">
 					Hi. I am Ian Carl Gimenez. I am a freelance full stack web developer and a graphic designer. 
@@ -24,5 +25,6 @@
 				</p>
 			</div>
 		</div>
+		
 	</body>
 	</html>
